deploy-kube-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgl-portal-svc
  labels:
    app: sgl-portal
spec:
  type: NodePort
  selector:
    app: sgl-portal
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 8050
      nodePort: 31050
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-app-local-dev
  labels:
    app: sgl-portal
spec:
  containers:
  - name: sgl-db
    image: datajoint/mysql:5.7
    volumeMounts:
      - name: mysqldata
        mountPath: /var/lib/mysql
  - name: sgl-backend
    image: djdev_backend
    imagePullPolicy: Never  # we're getting this from Docker repo on localhost, not from DockerHub
    ports:
      - containerPort: 8050
    volumeMounts:
      - name: backend-repo
        mountPath: /repository
  volumes:
    - name: mysqldata
      persistentVolumeClaim:
        claimName: pvc-db
    - name: backend-repo
      persistentVolumeClaim:
        claimName: pvc-backend
